--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=api-gateway
 
-server.port=8080
+server.port=9191
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-register=true
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka/
+management.endpoints.web.exposure.include=*
 
-spring.cloud.gateway.discovery.locator.enable=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.cloud.gateway.routes[0].id=product-service
+spring.cloud.gateway.routes[0].uri=http://product-service:8081
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product/**
