--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=discovery-service
 server.port=8761
 
 eureka.client.register-with-eureka=false
-eureka.client.fetch-register=false
+eureka.client.fetch-registry=false
